[project]
name = "customer-service-mcp"
version = "0.1.0"
description = "Customer Service MCP Server for order management and customer support"
authors = [
    {name = "Customer Service Team", email = "support@company.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
